// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OnboardingTips Components DevicePendingTip renders correctly 1`] = `
<div
  class="onboard-tip"
  style="left: 50%; top: 50%;"
>
  <a
    class="tooltip onboard-icon"
    currentitem="false"
    data-event="click focus"
    data-event-off="dblclick"
    data-for="pending-device-onboarding-tip"
    data-tip="true"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
      <path
        d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
      />
    </svg>
  </a>
  <div
    class="__react_component_tooltip show place-bottom type-light allow_click content"
    data-id="tooltip"
    id="pending-device-onboarding-tip"
    style="left: 0px; top: 0px;"
  >
    <p>
      It may take a few moments before your device appears.
    </p>
    <a>
      Open the tutorial
    </a>
     again or 
    <a
      href="/help/get-started"
    >
      go to the help pages
    </a>
     if you have problems.
    <div
      class="flexbox"
    >
      <div
        style="flex-grow: 1;"
      />
      <a>
        Dismiss
      </a>
    </div>
  </div>
</div>
`;

exports[`OnboardingTips Components WelcomeSnackTip renders correctly 1`] = `
<div
  class="onboard-snack"
>
  <button
    class="MuiButtonBase-root MuiIconButton-root"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiIconButton-label"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
  <div
    class="flexbox"
  >
    <ol>
      <li
        class=""
      >
        1
        . 
        Connect a device
      </li>
      <li
        class=""
      >
        2
        . 
        Deploy an Application Update
      </li>
      <li
        class=""
      >
        3
        . 
        Create your own Release and deploy it
      </li>
    </ol>
  </div>
</div>
`;

exports[`OnboardingTips Components tiny onboarding tips renders ApplicationUpdateReminderTip correctly 1`] = `
<div>
  <b>
    Deploy your first Application update
  </b>
  <p>
    To continue to make a demo deployment to this device click the 
    <a
      href="/releases"
    >
      Releases
    </a>
     tab
  </p>
</div>
`;

exports[`OnboardingTips Components tiny onboarding tips renders ArtifactIncludedDeployOnboarding correctly 1`] = `
<div>
  Let's deploy this Release to your device now
</div>
`;

exports[`OnboardingTips Components tiny onboarding tips renders ArtifactIncludedOnboarding correctly 1`] = `
<div>
  Now you have
   a Mender artifact with a simple Application update for you to test with.
  <p>
    Expand it for more details.
  </p>
</div>
`;

exports[`OnboardingTips Components tiny onboarding tips renders ArtifactModifiedOnboarding correctly 1`] = `
<div>
  Your uploaded Artifact is now part of a new 'Release'.
  <p>
    Now create a deployment with this Release!
  </p>
</div>
`;

exports[`OnboardingTips Components tiny onboarding tips renders DashboardOnboardingPendings correctly 1`] = `
<div>
  Next accept your device
</div>
`;

exports[`OnboardingTips Components tiny onboarding tips renders DashboardOnboardingState correctly 1`] = `
<div>
  This should be your device, asking for permission to join the server. Inspect its identity details, then check it to accept it!
</div>
`;

exports[`OnboardingTips Components tiny onboarding tips renders DeploymentsInprogress correctly 1`] = `
<div>
  Your deployment is in progress. Click to view a report
</div>
`;

exports[`OnboardingTips Components tiny onboarding tips renders DeploymentsPast correctly 1`] = `
<div>
  Your deployment has finished, click here to view it
</div>
`;

exports[`OnboardingTips Components tiny onboarding tips renders DeploymentsPastCompletedFailure correctly 1`] = `
<div>
  Your deployment has finished, but it looks like there was a problem. Click to view the deployment report, where you can see the error log.
</div>
`;

exports[`OnboardingTips Components tiny onboarding tips renders DevicesAcceptedOnboarding correctly 1`] = `
<div>
  <b>
    Good job! Your first device is connected!
  </b>
  <p>
    Your device is now 
    <b>
      accepted
    </b>
    ! It's now going to share inventory details with the server.
  </p>
  Click to expand the device and see more
</div>
`;

exports[`OnboardingTips Components tiny onboarding tips renders DevicesPendingAcceptingOnboarding correctly 1`] = `
<div>
  If you recognize this device as your own, you can accept it
</div>
`;

exports[`OnboardingTips Components tiny onboarding tips renders GetStartedTip correctly 1`] = `
<div>
  Click here to get started!
</div>
`;

exports[`OnboardingTips Components tiny onboarding tips renders SchedulingAllDevicesSelection correctly 1`] = `
<div>
  Select 'All devices' for now.
  <p>
    You can learn how to create device groups later.
  </p>
</div>
`;

exports[`OnboardingTips Components tiny onboarding tips renders SchedulingArtifactSelection correctly 1`] = `
<div>
  Select the test release we included.
</div>
`;

exports[`OnboardingTips Components tiny onboarding tips renders SchedulingGroupSelection correctly 1`] = `
<div>
  Select the testgroup device group you just made.
</div>
`;

exports[`OnboardingTips Components tiny onboarding tips renders SchedulingReleaseToDevices correctly 1`] = `
<div>
  Create the deployment! This will deploy the test Artifact to All devices
</div>
`;

exports[`OnboardingTips Components tiny onboarding tips renders UploadNewArtifactDialogDestination correctly 1`] = `
<div>
  We have prefilled this for you, for the demo - it is the destination on your device where the new 
  <i>
    index.html
  </i>
   file will be installed.
  <p>
    Click 'Next' below.
  </p>
</div>
`;

exports[`OnboardingTips Components tiny onboarding tips renders UploadNewArtifactDialogDeviceType correctly 1`] = `
<div>
  Enter the device types this will be compatible with. For the demo, you just need to select the device type of your demo device.
</div>
`;

exports[`OnboardingTips Components tiny onboarding tips renders UploadNewArtifactDialogReleaseName correctly 1`] = `
<div>
  Now name your Release: for the demo you could call it something like "hello-world".
  <p>
    Then click 'Upload' to finish this step!
  </p>
</div>
`;

exports[`OnboardingTips Components tiny onboarding tips renders UploadNewArtifactDialogUpload correctly 1`] = `
<div>
  Drag or select your new 
  <i>
    index.html
  </i>
   file here to upload it.
</div>
`;

exports[`OnboardingTips Components tiny onboarding tips renders UploadNewArtifactTip correctly 1`] = `
<div>
  Click 'Upload' to upload the file and create your new Release.
  <p>
    You can 
    <a>
      view the instructions again
    </a>
     if you need help creating the 
    <i>
      index.html
    </i>
     file.
  </p>
</div>
`;

exports[`OnboardingTips Components tiny onboarding tips renders UploadPreparedArtifactTip correctly 1`] = `
<div>
  Download our prepared demo Artifact from 
  <a
    href="http://somewhere.com"
  >
    here
  </a>
   to upload it to your profile.
</div>
`;
